# abbyEVM

./: BLOCKCHAIN.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-dev.yml  ci.yml  release.yml
examples/: README.md
examples/abbyscript/: README.md  abby_staking.abs  arithmetic.abs  conditional.abs  console_logging.abs  functions.abs  memory_operations.abs  number_literals.abs  onchain_storage_example.abs  read_storage_example.abs  simple_js_no_loops.abs  simple_js_syntax.abs  simple_onchain.abs  storage.abs  storage_vs_memory.abs  test_js_syntax.abs  variables_demo.abs
src/: cli.rs  main.rs  types.rs  utils.rs
src/blockchain/: block.rs  chain.rs  consensus.rs  mod.rs  network.rs  node.rs  staking.rs  transaction.rs
src/compiler/: README.md  ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs
src/evm/: mod.rs  tests.rs
src/opcodes/: mod.rs
