[package]
name = "abby_evm"
version = "0.1.0"
edition = "2021"
description = "A user-friendly Ethereum Virtual Machine implementation in Rust"
authors = ["Abby <abby@example.com>"]
license = "MIT"

[dependencies]
# Core dependencies for EVM implementation
primitive-types = "0.12"
ethereum-types = "0.14"
rlp = "0.5"
sha3 = "0.10"
secp256k1 = "0.28"
hex = "0.4"

# Utility dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# For CLI interface
colored = "2.0"
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "abby_evm"
path = "src/main.rs"
